Fix link formatting in 09-correlation.qmd and corresponding HTML file for clarity. Update last modified timestamp in sitemap.xml. Remove unused figure files to streamline the project.

--- a/09-correlation.qmd
+++ b/09-correlation.qmd
@@ -665,7 +665,7 @@ Following our four-step workflow for analyzing the correlation between Greenshan
 
 ### 7.6 Create Your Own Correlation Question
 
-Write a plausible practice question involving any aspect of the use of correlation, and our workflow.  Make use of the `cfseal` data which you can [download here](https://github.com/weharris/RStatsBootcamp-2025/raw/refs/heads/main/data/2.3-cfseal.xlsx.
+Write a plausible practice question involving any aspect of the use of correlation, and our workflow.  Make use of the `cfseal` data which you can [download here](https://github.com/weharris/RStatsBootcamp-2025/raw/refs/heads/main/data/2.3-cfseal.xlsx).
 
 <br>
 
